重构：JDK 17 现代化语法改进和代码质量优化
主要改进：
- 使用 URI.toURL() 替代过时的 URL 构造方法，提升安全性
- 采用文本块（Text Blocks）简化多行字符串处理
- 使用 var 类型推断提升代码可读性
- 优化异常处理，添加 URISyntaxException 支持
- 改进日志记录，使用完整异常对象而非仅消息文本

影响文件：
- BurpExtender.java: 核心 URL 处理和异常优化
- 多个工具类: 现代化语法改进
- 过滤器和 UI 组件: 类型推断优化

技术债务清理：
- 移除过时的 URL 构造方式
- 统一异常处理模式
- 提升代码现代化程度

兼容性：要求 JDK 17+